--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
 }
 ext { koin_version = "3.2.0-beta-1" }
 ext { nav_version = "2.4.2" }
@@ -37,8 +38,10 @@ android {
 }
 
 dependencies {
+    var okhttpVersion = "4.9.3"
 
     implementation project(':domain')
+    implementation project(':data')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -57,4 +60,9 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
+    //okhttp
+    implementation("com.squareup.okhttp3:okhttp:$okhttpVersion")
+
+    //logging interceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:$okhttpVersion")
 }
