--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.room:room-ktx:2.4.2'
+    var retrofitVersion = "2.9.0"
+    var okhttpVersion = "4.9.3"
+
     implementation project(':domain')
     implementation project(':data')
 
@@ -57,4 +61,17 @@ dependencies {
 
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
+
+    //timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+
+    //retrofit
+    implementation("com.squareup.retrofit2:retrofit:$retrofitVersion")
+    implementation("com.squareup.retrofit2:converter-gson:$retrofitVersion")
+
+    //okhttp
+    implementation("com.squareup.okhttp3:okhttp:$okhttpVersion")
+
+    //logging interceptor
+    implementation("com.squareup.okhttp3:logging-interceptor:$okhttpVersion")
 }
