--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+appVersionCode=1
+appVersionName=1.0.0
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
