--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -2,7 +2,7 @@ name: Android Pull Request
 
 on:
   pull_request:
-    types: [ opened, reopened ]
+    types: [ opened, reopened, edited ]
 
   #For Firebase Apps
   #env:
@@ -16,10 +16,10 @@ jobs:
     steps:
       # Checkout
       - uses: actions/checkout@v1
-      - name: set up JDK 1.8
+      - name: set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11
 
       #For Firebase Apps
       # Decode Google services file
