--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,14 @@ on:
       - 'main'
 
 env:
+  GITHUB_TOKEN: ${{ github.token }}
+
   #TODO add these as github secrets
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   PRODUCTION_KEY_ALIAS: ${{ secrets.PRODUCTION_KEY_ALIAS }}
   PRODUCTION_KEY_PASSWORD: ${{ secrets.PRODUCTION_KEY_PASSWORD }}
   PRODUCTION_STORE_FILE: ${{ secrets.PRODUCTION_STORE_FILE }}
   PRODUCTION_STORE_PASSWORD: ${{ secrets.PRODUCTION_STORE_PASSWORD }}
-  SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }}
+  # SERVICE_ACCOUNT_JSON: ${{ secrets.SERVICE_ACCOUNT_JSON }}
   #For Firebase Apps
   #FIREBASE_CONFIG: ${{ secrets.FIREBASE_CONFIG }}
 
@@ -24,10 +25,10 @@ jobs:
     steps:
       # Step 1 Checkout
       - uses: actions/checkout@v1
-      - name: set up JDK 1.8
+      - name: set up JDK 11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
+          java-version: 11
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
@@ -77,17 +78,17 @@ jobs:
           semantic_version: 18.0.0
 
       # Google Play Deploy
-      - name: Google Play Deploy
-        uses: r0adkll/upload-google-play@v1.0.16
-        with:
-          serviceAccountJsonPlainText: $SERVICE_ACCOUNT_JSON
+        #- name: Google Play Deploy
+        # uses: r0adkll/upload-google-play@v1.0.16
+          #  with:
+          #   serviceAccountJsonPlainText: $SERVICE_ACCOUNT_JSON
           ##TODO Change package name
-          packageName: com.hattrick.myapplication
-          releaseFiles: app/build/outputs/bundle/release/*.aab
+          #   packageName: com.hattrick.myapplication
+          #   releaseFiles: app/build/outputs/bundle/release/*.aab
           #TODO Set desired track
-          track: internal
-          status: completed
-          inAppUpdatePriority: 5
+          #   track: internal
+          #   status: completed
+      #   inAppUpdatePriority: 5
 
       # Slack Notification
       - name: Slack Notification
