--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.6.10' apply false
 }
 
+apply from: rootProject.file('versioning.gradle')
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
